--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <section class="letter">
                 <p>Dear bebu,</p>
                 <p>
-                    Happy 21st Birthday bebu! 😗🎉 Sa bawat taon na pagtanda mo, araw-araw ka naman gumaganda sa paningin ko. Today is Your special day bembem and I just want to let you know that I'm so proud of you and will always will be. 
+                    Happy 21st Birthday bebu! 😗🎉 Sa bawat taon na pagtanda mo, araw-araw ka naman gumaganda sa paningin ko. Today is your special day bembem and I just want to let you know that I'm so proud of you and will always will be. 
                 </p>
                 <p>
                    Bebu is always here to listen to your rants, chika and kaartehan. I will always root for you success no matter what. I love you more than words bebu.
